[package]
name = "rust-socket-programming"
version = "0.1.0"
authors = ["hiroaqii <hiroaqii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
clap = "3.0.0-beta.2"
anyhow = "1.0"